--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   set_up:
     runs-on: ubuntu-18.04
-    name: Set up - OTP ${{ matrix.otp }} | Elixir ${{ matrix.elixir }} | OS ${{ matrix.os }}
+    name: Set up
     strategy:
       matrix:
         os: [ubuntu-18.04]
@@ -22,8 +22,8 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-elixir@v1
       with:
-        otp-version: ${{ matrix.otp }}
-        elixir-version: ${{ matrix.elixir }}
+        otp-version: ${ matrix.otp }
+        elixir-version: ${ matrix.elixir }
 
     - name: Install dependencies
       run: |
