--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-elixir@v1
       with:
-        otp-version: ${ matrix.otp }
-        elixir-version: ${ matrix.elixir }
+        otp-version: ${{ matrix.otp }}
+        elixir-version: ${{ matrix.elixir }}
 
     - name: Install dependencies
       run: |
